# H2BP

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker_compose_up.sh
protos/: anns_service.proto
scripts/: docker_first_conn.sh  entrypoint.sh  export_ld.sh  faiss_cmake.sh  first_conn.sh  gen_para.py  install_grpc.sh  power.sh  run.sh
src/: CMakeLists.txt  ann_insert.h  ann_mpi_service.h  ann_search.h  config.h  datasets.cpp  datasets.h  utils.h
src/bench/: bench.cpp  dynamic_benchmark.cpp  dynamic_benchmark.h
src/check/: check.cpp
src/client/: client.cpp  client.h  client_async.h
src/graph_indexer/: graph_indexer.cpp
src/grpc_server/: grpc_async_call.cpp  grpc_async_call.h  grpc_server.cpp  grpc_server.h
src/hnsw_indexer/: hnsw_indexer.cpp
src/indexer/: indexer.cpp
src/optimizer/: optimizer.cpp
src/optimizer_bp/: optimizer_bp.cpp
src/optimizer_gd/: optimizer_gd.cpp
src/partition/: partition.cpp  partition.h  partition_graph.cpp  partition_graph.h  partition_graphp.cpp  partition_graphp.h  partition_hybrid.cpp  partition_hybrid.h  partition_kmeans.cpp  partition_kmeans.h  partition_loader.h
src/queryer/: queryer.cpp
